--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
       <p>technology.  From 1992 to 1999, Kalam was the Chief Scientific Adviser to the Prime Minister and the Secretary of the DRDO.
          Kalam was the Chief Project Coordinator during the Pokhran II tests.</p>
       <p>&#9755; Dr. Kalam has received the coveted civilian awards Padma Bhushan (1981)</p> 
-      <p>  and Padma Vibhushan (1990), and the highest civilian honor Bharat Ratna (1997).</p>
+      <p> . and Padma Vibhushan (1990), and the highest civilian honor Bharat Ratna (1997).</p>
       
       
        <p>&#9755; Wheeler Island ,a national missile test site in Odisha,was renamed <strong>Kalam</strong></p> 
