--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,7 @@
       <p> <strong>APJ Abdul Kalam Road</strong> in August 2015.</p>
       <p>&#9755; In February 2018,scientists from the Botanical survey of India named a </p> 
       <p>newly found plant species as Dryptes kalamtii,in his honour</p>
+      <p>aziz</p>
 
       <br><br><br>
     </div>
