Update app.component.html hi aziz change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
   <div id="final">
     <p>For more information checkout <strong>A.P.J. Abdul Kalam </strong> on wikipidea</p>
   </div>
-  
+  <p>Hi aziz</p>
 
 </body>
 
